[#3595] feat: `MessageMonitors` and monitoring support (#3763)